--- a/_includes/social.html
+++ b/_includes/social.html
@@ -6,7 +6,7 @@
     </a>
   </li>
   {% else %}
-  {% endif %} 
+  {% endif %}
   {% if site.facebook %}
   <li>
     <a href="{{ site.facebook }}" target="_blank">
@@ -14,7 +14,7 @@
     </a>
   </li>
   {% else %}
-  {% endif %} 
+  {% endif %}
   {% if site.google-plus %}
   <li>
     <a href="{{ site.google-plus }}" target="_blank">
@@ -32,8 +32,8 @@
   {% else %}{% endif %}
   {% if site.pinterest %}
   <li>
-    <a href="{{ site.pinterest }}" target="_blank">
-      <i class="fa fa-pinterest" aria-hidden="true"></i>
+    <a href="{{ site.linkedin }}" target="_blank">
+      <i class="fa fa-linkedin" aria-hidden="true"></i>
     </a>
   </li>
   {% else %}
