--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
     {% else %}
     {% endif %}
     {% if site.pinterest %}
-      <li><a href="{{ site.pinterest }}" target="_blank"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+      <li><a href="{{ site.linkedin }}" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
     {% else %}
     {% endif %}
     {% if site.youtube %}
